# prospectio-chatbot

./: .dockerignore  .env.example  .gitignore  .gitmodules  Dockerfile  Pipfile  README.md  chainlit.md  config.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt  start-docker.sh
.chainlit/: config.toml
.gemini/: GEMINI.md
.github/: cd.yaml  copilot-instructions.md
.github/workflows/: cd.yaml
apis/: duckduckgo.py  generic.py  generic_api.py  google_news.py
apis/dataclass/: top_headlines.py
chatbot/: .env.example  Dockerfile  chainlit.md  chainlit.py  config.py  docker-compose.yml  main.py  pyproject.toml
chatbot/.chainlit/: config.toml
chatbot/apis/: browser_use_client.py  browseruse.py  duckduckgo.py  generic.py  google_news.py
chatbot/apis/dataclass/browseruse/: browser_use_request.py  browser_use_response.py
chatbot/apis/dataclass/duckduckgo/: news_results.py
chatbot/apis/dataclass/google/: articles.py  sources.py  top_headlines.py
chatbot/core/: essentials.py
chatbot/graphs/: generic_graph.py  graph_factory.py  graph_params.py
chatbot/graphs/conversational/: graph.py  nodes.py  state.py
chatbot/graphs/conversational/chains/: generate.py
chatbot/graphs/games/: graph.py  nodes.py  state.py
chatbot/graphs/games/chains/: generate.py
chatbot/graphs/news/: edges.py  graph.py  nodes.py  state.py
chatbot/graphs/news/chains/: article_crawler.py  article_sumarizer.py  country_finder.py  fetch_news.py  generate.py  headlines_or_specific.py  topic_finder.py
chatbot/graphs/news/models/: choice.py  country.py  topic.py
chatbot/graphs/news/tools/: news.py
chatbot/graphs/pytube/: edges.py  graph.py  nodes.py  state.py
chatbot/graphs/pytube/chains/: conversation.py  generate.py  is_youtube_link.py  summarizer.py
chatbot/graphs/pytube/models/: binary.py
chatbot/graphs/pytube/tools/: pytube.py
chatbot/llm/: client_factory.py  generic_client.py
chatbot/profiles/: chat_profiles.py
chatbot/prompts/: prompt_loader.py
chatbot/prompts/graphs/games/: generate.txt  search.txt
chatbot/prompts/graphs/news/: article_crawler.txt  article_summarizer.txt  generate.txt  headlines_or_specific.txt  topic_finder.txt
chatbot/prompts/graphs/pytube/: generate.txt  summarizer.txt
chatbot/settings/: chat_settings.py
constants/: graph_mapping.py  nodes_mapping.py  prompt_mapping.py
core/: essentials.py
database/: docker-compose.yml  init.sql
graphs/: generic_graph.py  graph_factory.py  graph_params.py
graphs/conversational/: graph.py  nodes.py  state.py
graphs/news/: edges.py  graph.py  nodes.py  state.py
graphs/pytube/: edges.py  graph.py  nodes.py  state.py
llm/: client_factory.py  generic_client.py
llm_client/: llm_client.py
ollama/: Dockerfile  docker-compose.yml
profiles/: chat_profiles.py
prompts/: market_analysis.txt  prompt_loader.py  system_prompt.txt
prospectio-chatbot/: .env.example  Dockerfile  chainlit.py  config.py  pyproject.toml
prospectio-chatbot/.chainlit/: config.toml
prospectio-chatbot/graphs/prospectio/: graph.py  nodes.py
prospectio-chatbot/llm/: client_factory.py
prospectio-chatbot/prompts/: prompt_loader.py
prospectio-chatbot/prompts/prospectio/: system.md
prospectio-chatbot/public/: theme.json
prospectio-chatbot/settings/: chat_settings.py
prospectio_chatbot/: chainlit.py  cl_app.py  config.py  main.py
prospectio_chatbot/.chainlit/: config.toml
prospectio_chatbot/api/: main.py
prospectio_chatbot/core/: essentials.py
prospectio_chatbot/graphs/: graph_factory.py  graph_params.py
prospectio_chatbot/llm/: client_factory.py
prospectio_chatbot/profiles/: chat_profiles.py
settings/: chat_settings.py
tools/: docX.py  tools.py
(+35 files in other folders)
