[tool.poetry]
name = "creaventure"
version = "0.1.0"
description = "Chatbot with open sources LLM"
authors = ["Kaiohz <goncalves.yohan@gmail.com>"]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = "^3.12.7"
chainlit = "2.2.0"
pydantic = "2.10.1"
numpy = "1.26.4"
Crawl4AI = "0.3.73"
google-auth = "2.37.0"
ollama = "0.4.7"
torch = "2.2"
psycopg = "3.2.4"
psycopg-binary = "3.2.4"
gradio-client = "1.7.0"

langgraph = "*"
langchain-ollama = "*"
langchain-community = "*"
langchain-mistralai = "*"
httpx = {extras = ["http2"], version = "*"}
pytubefix = "*"
openai-whisper = "*"
setuptools-rust = "*"
langchain-google-genai = "*"
duckduckgo-search = "*"

[tool.poetry.group.dev.dependencies]
pytest = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
